fix: scrollbar height and corner color

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -50,7 +50,7 @@
     --scrollbar-track: 0 0% 93%;
     --scrollbar-thumb: 0 0% 65%;
     --scrollbar-width: 0.485rem;
-    --scrollbar-height: 0.485rem;
+    --scrollbar-height: 0.775rem;
     --scrollbar-thumb-radius: 0.5rem;
 
     --avh: var(--vh, 1vh);
@@ -156,11 +156,11 @@
     }
 
     ::-webkit-scrollbar-thumb:hover {
-      background-color: red;
+      background-color: theme("colors.scrollbarThumb.DEFAULT"/50%);
     }
 
     ::-webkit-scrollbar-corner {
-      background-color: theme("colors.scrollbarThumb.DEFAULT");
+      background-color: theme("colors.scrollbarThumb.DEFAULT"/50%);
     }
 
     ::-webkit-scrollbar-corner,
